-----------
v4.2.10-git
-----------



------
v4.2.9
------

[mjr] Better prevention of importing duplicate contacts with same email
      addresses via the API (Bug #14119).
[mjr] Remove object reference from Content when object is deleted (Bug #14112).
[mjr] Remove tags from Content when tagged object is deleted (Bug #14112).
[mjr] Allow API to search all email type fields when calling getField().
[mjr] Fix removing all contacts owned by a specific user.
[jan] Fix inserting and updating photos with Oracle backends.
[mjr] Fix incorrectly populating email field when importing vCard (Bug #14046).


------
v4.2.8
------

[mjr] Fix issue where sidebar links point to incorrect address book.


------
v4.2.7
------

[jan] Fix error when removing user data.


------
v4.2.6
------

[jan] Don't try to load Content application if tags are disabled.
[mjr] Fix adding tags to new contacts (Bug #13884).
[jan] Fix waiting for replication on LDAP backend.


------
v4.2.5
------

[jan] Fix export format of tags to vCard 3.0 categories (Bug #13800).


------
v4.2.4
------

[jan] Use the SHOW permission to determine the sidebar address book list.


------
v4.2.3
------

[jan] Export nicer display names for users and resources via WebDAV.
[jan] Export custom owner and read-only properties via WebDAV.
[jan] Fix exporting contacts without __uid attributes via WebDAV.
[jan] Fix importing empty birthdays/anniversaries from vCard.
[mjr] Fix defaulting to the defined search fields when searching via the API.
[mjr] Fix broken EAS synchronization due to incorrect setting of the
      Categories field.


------
v4.2.2
------

[jan] Fix duplicate searching in address books without owner field.
[jan] Fix duplicate search form (woe@gmx.de, Bug #13528).
[mms] Make case-insensitive API e-mail search work on non-ASCII data (Request
      #12480).
[jan] Fix listing group members that contain colons in their IDs.


------
v4.2.1
------

[jan] Display correct address books in WebDAV folders.