@@ -2,6 +2,7 @@
 v4.2.10-git
 -----------
 
+[mjr] Fix fatal test error related to Content_Tagger.
 
 
 ------
